20200127 First push of code

--- a/nodejs_test/test-project/views/pages/homepage.ejs
+++ b/nodejs_test/test-project/views/pages/homepage.ejs
@@ -48,6 +48,7 @@
           </div>
         </div>
         <a class="btn btn-outline-info mt-5" href="/faq">Learn more</a>
+		<a class="btn btn-outline-info mt-5" href="/bot">Bot</a>
       </div>
     </div>
   </div>
